==> millerlp/arduino-dataflash/DataFlash.cpp <==
#include <Arduino.h>
#include <WProgram.h>
#include "DataFlash.h"
#include "DataFlashCommands.h"

void DataFlash::resumeFromDeepPowerDown()
{
    reEnable();     // Reset command decoder.
    
    /* Send opcode */
    SPI.transfer(DATAFLASH_RESUME_FROM_DEEP_POWER_DOWN);
    
    /* Resume device */
    disable();
    
    /* The CS pin must stay high during t_RDPD microseconds before the device
     * can receive any commands.
     * On the at45db161D t_RDPD = 35 microseconds.
     * Wait 40us (just to be sure). */
    delayMicroseconds(40);
}

void DataFlash::hardReset()
{
    if (m_resetPin >= 0)
    {
        digitalWrite(m_resetPin, LOW);

        /* The reset pin should stay low for at least 10us (table 18.4). */
        delayMicroseconds(10);
        
        /* According to the Dataflash spec (21.6 Reset Timing),
         * the CS pin should be in high state before RESET
         * is deasserted (ie HIGH). */
        disable();
        /* Just to be sure that the high state is reached */
        delayMicroseconds(1);
            
        digitalWrite(m_resetPin, HIGH);
        
        /* Reset recovery time = 1us */
        delayMicroseconds(1);
    }
}
